# YourWeather

./: README.md
backend/: CMakeLists.txt
backend/include/: api_client.h  icon_renderer.h  weather_service.h
backend/src/: api_client.cpp  icon_renderer.cpp  main.cpp  rpc_server.cpp  weather_service.cpp
frontend/: MainWindow.xaml  MainWindow.xaml.cs  WeatherApp.csproj
frontend/Converters/: IconConverter.cs
frontend/Models/: WeatherData.cs
frontend/Services/: WeatherService.cs
frontend/ViewModels/: MainViewModel.cs
shared/: weather_data.h
